<resources>
    <string name="app_name">Threads Lite</string>
    <string name="titulo1">Threads´Lite</string>
    <string name="usuario1">Usuario: </string>
    <string name="contrasena1">Contraseña: </string>
    <string name="entrar">Iniciar sesión</string>
    <string name="todo">TODO</string>
    <string name="titulo2">Registro</string>
    <string name="nombre">Nombre: </string>
    <string name="apellido">Apellido: </string>
    <string name="nombre_usuario">Nombre de usuario: </string>
    <string name="contraseña_registro">Contraseña: </string>
    <string name="confirmación_contraseña">Confirmar contraseña: </string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="registrar1">Registrar</string>
    <string name="para_ti">Para ti</string>
    <string name="seguidos">Seguidos</string>
    <string name="novedades">¿Qué novedades tiene para hoy?</string>
    <string name="cerrar_sesion">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="nueva_publicacion">"Nueva publicación "</string>
    <string name="Publicar">Publicar</string>
    <string name="imagen_seleccionada">imagen seleccionada</string>
    <string name="TituloPublicacion">Titulo de la publicación</string>
    <string name="URL">URL de la imagen</string>
    <string name="icono_de_usuario">Icono de usuario</string>
    <string name="content_description_inicio">Inicio</string>
    <string name="content_description_busqueda">Búsqueda</string>
    <string name="content_description_add">Agregar publicación</string>
    <string name="content_description_reacciones">Reacciones</string>
    <string name="content_description_perfil">Perfil</string>
    <string name="content_description_exit">Cerrar sesión</string>
    <string name="agrega">Agregar hilo</string>
    <string name="titulo">Título del hilo</string>
    <string name="descripcion">Escribe una publicación</string>
    <string name="fotoperfil1">Foto de perfil del usuario</string>
    <string name="autor">Autor del hilo</string>
    <string name="content_description_user_verificado">Usuario verificado</string>
    <string name="content_description_contenido">Contenido del hilo</string>iconoComment3
    <string name="content_description_iconoEdit">Icono de editar</string>
    <string name="content_description_iconoDelete">Icono de eliminar</string>
    <string name="content_description_logo">Icono de la aplicación</string>
    <string name="initHilo">INIT HILO</string>
    <string name="helper_required">Requerido</string>
    <string name="guardar">Guardar</string>
    <string name="url_de_la_imagen">URL de la imagen</string>
    <string name="publicar">Publicar</string>
    <string name="contenido">Contenido</string>
    <string name="crear_nuevo_hilo">Publicar Hilo</string>
    <string name="guardar2">Guardar</string>
</resources>