<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemHilo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gris"
    android:padding="12dp">

    <!-- Sección de Perfil del Usuario y Autor -->
    <ImageView
        android:id="@+id/profile"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:contentDescription="@string/fotoperfil1"
        android:src="@drawable/foto_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/autor"
        android:textColor="@color/blanco"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/profile"
        app:layout_constraintTop_toTopOf="@id/profile" />

    <ImageView
        android:id="@+id/verificado"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/content_description_user_verificado"
        android:src="@drawable/verificado"
        app:layout_constraintBottom_toBottomOf="@id/tvAutor"
        app:layout_constraintStart_toEndOf="@id/tvAutor"
        app:layout_constraintTop_toTopOf="@id/tvAutor" />

    <!-- Sección de Título y Contenido del Hilo -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/titulo"
        android:textColor="@color/blanco"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvAutor"
        app:layout_constraintTop_toBottomOf="@id/tvAutor" />

    <TextView
        android:id="@+id/tvContenido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/content_description_contenido"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvAutor"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo" />

    <!-- Sección de la Imagen de la Publicación -->
    <!-- Este ImageView es donde se cargará la imagen de la URL -->
    <ImageView
        android:id="@+id/imageViewPublicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContenido"
        tools:src="@tools:sample/backgrounds/scenic" />

    <!-- Sección de Botones de Acción (Editar y Eliminar) -->
    <ImageView
        android:id="@+id/btnEditar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/content_description_iconoEdit"
        android:src="@drawable/ic_editar"
        app:layout_constraintStart_toStartOf="@id/tvAutor"
        app:layout_constraintTop_toBottomOf="@id/imageViewPublicacion" />

    <ImageView
        android:id="@+id/btnEliminar"
        android:layout_width="62dp"
        android:layout_height="52dp"
        android:layout_marginEnd="22dp"
        android:contentDescription="@string/content_description_iconoDelete"
        android:src="@drawable/ic_papelera"
        app:layout_constraintBottom_toBottomOf="@id/btnEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="26dp"
        app:layout_constraintTop_toTopOf="@id/btnEditar" />

</androidx.constraintlayout.widget.ConstraintLayout>
