<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/gris">

    <TextView
        android:id="@+id/tvTituloPagina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_nuevo_hilo"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campo para ingresar el Título de la publicación -->
    <EditText
        android:id="@+id/etTituloPublicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/titulo"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvTituloPagina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campo para ingresar el Contenido/Descripción de la publicación -->
    <EditText
        android:id="@+id/etContenidoPublicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/contenido"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:gravity="top"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/etTituloPublicacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campo para que el usuario pegue la URL de la imagen -->
    <EditText
        android:id="@+id/etUrlImagen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/url_de_la_imagen"
        android:inputType="textUri"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/etContenidoPublicacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <ImageView
        android:id="@+id/previewImageIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUrlImagen"
        tools:src="@tools:sample/backgrounds/scenic" />


    <!-- Botón para enviar los datos al backend -->
    <Button
        android:id="@+id/btnCrearHilo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/publicar"
        android:textColor="@color/blanco"
        android:backgroundTint="@color/amarillo"
        app:layout_constraintTop_toBottomOf="@id/previewImageIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>