<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gris"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Principal">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Editar Publicación"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/ettitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:hint="@string/titulo"
        android:textSize="16sp"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/blanco" />

    <EditText
        android:id="@+id/etdescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="top"
        android:textSize="16sp"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:padding="12dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/blanco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_dialog_alert_cancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginStart="50dp"
            android:backgroundTint="@color/blanco"
            android:text="@string/cancelar"
            android:textColor="@color/blanco"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_dialog_alert_guardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:backgroundTint="@color/amarillo"
            android:text="@string/guardar2"
            android:layout_marginStart="100dp"
            android:textColor="@color/blanco"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
