<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Principal">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="start"
            android:layout_weight="1"
            android:text="@string/titulo1"
            android:textColor="@color/blanco1"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="70dp"
            android:src="@drawable/threadslogo"
            tools:ignore="ContentDescription"/>

        <ImageButton
            android:id="@+id/btnCerrarsesion"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/fondo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_salir"
            android:contentDescription="@string/content_description_exit"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/gris"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/paraTiButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/gris"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/para_ti"
            android:textColor="@color/blanco2"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/seguidosButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/gris"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/seguidos"
            android:textColor="@color/blanco2"
            android:textSize="18sp"/>
    </LinearLayout>

    <!-- Contenedor de Fragmentos para mostrar diferentes vistas -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toTopOf="@id/bottomNavBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/fragment_lista_publicaciones_hilos"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/fondo"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/inicioButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/gris"
            android:src="@drawable/outline_hogar_24"
            android:contentDescription="@string/content_description_inicio"
            app:maxImageSize="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnBusqueda"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnBusqueda"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/gris"
            android:src="@drawable/outline_conditions_24"
            android:contentDescription="@string/content_description_busqueda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/anadirHilo"
            app:layout_constraintStart_toEndOf="@+id/inicioButton"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/anadirHilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_hilo"
            android:contentDescription="@string/agrega"
            app:backgroundTint="@color/gris"
            app:tint="@color/blanco"
            app:maxImageSize="36dp"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnReaccion"
            app:layout_constraintStart_toEndOf="@+id/btnBusqueda"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnReaccion"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/gris"
            android:src="@drawable/outline_alert_24"
            android:contentDescription="@string/content_description_reacciones"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/perfilButton"
            app:layout_constraintStart_toEndOf="@+id/anadirHilo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/perfilButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:backgroundTint="@color/gris"
            android:src="@drawable/outline_account_circle_24"
            android:contentDescription="@string/content_description_perfil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnReaccion"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

